[gd_scene load_steps=2 format=3 uid="uid://gacha_screen_001"]

[ext_resource type="Script" path="res://scripts/ui/gacha_screen.gd" id="1_script"]

[node name="GachaScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.102, 0.102, 0.18, 1)

[node name="BannerImage" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.55
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145, 0.145, 0.259, 1)

[node name="BannerTitle" type="Label" parent="BannerImage"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.984, 0.749, 0.141, 1)
theme_override_font_sizes/font_size = 42
text = "STANDARD BANNER"
horizontal_alignment = 1

[node name="BannerSubtitle" type="Label" parent="BannerImage"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 70.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.58, 0.639, 0.722, 1)
text = "All units available"
horizontal_alignment = 1

[node name="RatesLabel" type="Label" parent="BannerImage"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.58, 0.639, 0.722, 1)
theme_override_font_sizes/font_size = 14
text = "Rates: 5★ 2% | 4★ 10% | 3★ 88%
Soft pity at 50, guaranteed 5★ at 100"
horizontal_alignment = 1

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "< BACK"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PityLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.58, 0.639, 0.722, 1)
theme_override_font_sizes/font_size = 16
text = "Pity: 0/100"
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="GemIcon" type="ColorRect" parent="TopBar"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.29, 0.62, 1, 1)

[node name="GemsLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.29, 0.62, 1, 1)
theme_override_font_sizes/font_size = 24
text = "1000 Gems"
vertical_alignment = 1

[node name="PullButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
theme_override_constants/separation = 60

[node name="SinglePullButton" type="Button" parent="PullButtons"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Single Pull
100 Gems"

[node name="MultiPullButton" type="Button" parent="PullButtons"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "10x Pull
900 Gems"

[node name="ResultsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultsBackground" type="ColorRect" parent="ResultsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145, 0.145, 0.259, 0.98)

[node name="ResultsTitle" type="Label" parent="ResultsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.984, 0.749, 0.141, 1)
theme_override_font_sizes/font_size = 32
text = "SUMMON RESULTS"
horizontal_alignment = 1

[node name="ResultsContainer" type="Control" parent="ResultsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="ResultsPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 300.0
offset_top = -80.0
offset_right = -300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "CONTINUE"
theme_override_colors/font_color = Color(0.102, 0.102, 0.18, 1)

[node name="SummonOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.85)

[node name="SummonCircle" type="ColorRect" parent="SummonOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)
color = Color(0.612, 0.545, 0.98, 0.8)

[node name="InnerCircle" type="ColorRect" parent="SummonOverlay/SummonCircle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -70.0
offset_right = 70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145, 0.145, 0.259, 0.9)

[node name="RevealPosition" type="Control" parent="SummonOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="RevealedUnitsContainer" type="Control" parent="SummonOverlay"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="FlashOverlay" type="ColorRect" parent="SummonOverlay"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="SkipButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -70.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "SKIP >>"
